# KickLens

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.jobs  Makefile  README.md  alembic.ini  docker-compose.yml  out-can.json  out-inf.json  pyproject.toml  requirements-jobs.txt
.github/workflows/: ci.yml  deploy.yml  train.yml
anchors/: .wiring-test.jsonl  2026-07-16.jsonl  2026-07-17.jsonl  2026-07-18.jsonl  2026-07-22.jsonl  2026-07-23.jsonl  README.md
apps/: __init__.py
apps/api/: __init__.py  lambda_handler.py  main.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.tsx  api.ts  main.tsx
apps/web/src/components/: Archive.tsx  Methodology.tsx  Performance.tsx  ProbBar.tsx  Upcoming.tsx
apps/web/src/components/charts/: BaselineLadder.tsx  ChartTooltip.tsx  ConfidenceChart.tsx  EloHistory.tsx  ReliabilityDiagram.tsx  theme.ts
apps/web/src/components/layout/: HealthContext.tsx  SiteFooter.tsx  Ticker.tsx  TopNav.tsx  UpcomingContext.tsx
apps/web/src/components/ui/: Badge.tsx  CountUp.tsx  HashBadge.tsx  ProbBar.tsx  ScopeChip.tsx  Section.tsx  StatTile.tsx  Toc.tsx  states.tsx
apps/web/src/features/: NotFound.tsx
apps/web/src/features/home/: HomePage.tsx  (+1 more)
apps/web/src/lib/: facts.ts  format.ts  matchPhase.test.ts  matchPhase.ts  useApi.ts  useCountdown.ts  useRelativeTime.ts  useSettle.ts
apps/web/src/styles/: base.css  components.css  layout.css  tokens.css
docs/: KickLens_Build_Contract_v2.1.md  KickLens_Dependency_Verification.md  KickLens_Final_PreBuild_Review.md  KickLens_Implementation_Plan_and_Backlog_v1.0.md  KickLens_ML_Experimental_Protocol_v1.0.md  KickLens_Master_Specification_v2.md  SoccerEdge_Build_Contract_v2.1.md  SoccerEdge_Dependency_Verification.md  SoccerEdge_Final_PreBuild_Review.md  SoccerEdge_Implementation_Plan_and_Backlog_v1.0.md  SoccerEdge_ML_Experimental_Protocol_v1.0.md  SoccerEdge_Master_Specification_v2.md  baselines.md  data-card.md  data-pipeline.md  final-test-report-2025.md  final-test-report-template.md  fs-v1.md  launch-runbook.md  leakage-tests.md  model-card.md  pre-final-test-checklist.md  roadmap-model-improvements.md  schema.md  selection.md
docs/adr/: ADR-001-elo-draw-mov.md  ADR-002-infrastructure-choices.md  ADR-003-modeling-choices.md  ADR-004-leased-job-claims.md  ADR-005-night-results-ingest.md
docs/spikes/: E1-playoffs.md  E2-live-mls.md  E3-live-odds.md  E4-odds-coverage.md  E6-sample-size.md  lambda-image.md  neon-connection.md  team-aliases.md
experiments/: final_test_2025.json  runs.jsonl
infra/: README.md
infra/spikes/lambda-image/: Dockerfile  handler.py  requirements.txt
infra/terraform/: alarms.tf  apigateway.tf  budget.tf  cloudfront.tf  ecr.tf  iam.tf  lambda.tf  observability.tf  out-canary.json  out-ingest.json  out-odds.json  outputs.tf  providers.tf  s3.tf  schedules.tf  tfplan-arm  variables.tf
jobs/: __init__.py  handlers.py
migrations/: env.py
migrations/versions/: 0001_core_schema.py  0002_audit_ops.py
scripts/: build_api_zip.py
tests/: conftest.py  test_anchor.py  test_api.py  test_api_dashboard.py  test_calibration.py  test_canary.py  test_config.py  test_db_access.py  test_db_smoke.py  test_features_units.py  test_final_test_gate.py  test_finalization.py  test_grading.py  test_ingestion_pipeline.py  test_ingestion_units.py  test_launch_review_fixes.py  test_leakage.py  test_live_adapters.py  test_logistic.py  test_m5_ledger.py  test_market.py  test_models_m3.py  test_scaffold.py  test_schema_audit.py  test_schema_core.py  test_snapshot_enrichment.py  test_train_production.py
(+13 files in other folders)
