[project]
name = "kicklens"
version = "0.1.0"
description = "KickLens — methodologically honest MLS 1X2 forecaster with a tamper-evident public track record"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14",
    "fastapi>=0.139.0",
    "lightgbm>=4.6.0",
    "mangum>=0.21.0",
    "numpy>=2.5.1",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pre-commit>=4.0",
    "scipy-stubs>=1.18.0.0",
    "httpx>=0.28.1",
    "uvicorn>=0.50.2",
    "boto3>=1.43.46",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "packages/common",
    "packages/ingestion",
    "packages/features",
    "packages/models",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["infra"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DTZ", # flake8-datetimez — all timestamps UTC (CLAUDE.md §2.6)
    "RUF", # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["packages", "tests", "apps", "jobs"]
warn_unreachable = true
pretty = true

# boto3/botocore ship no type stubs or py.typed marker and are used only lazily on the cloud
# path (SSM reads, S3 artifacts). Ignore their missing imports centrally so the result is
# STABLE regardless of whether boto3 is installed in a given env: CI installs it (frozen
# lockfile) so mypy emits `import-untyped`, an env without it emits `import-not-found`. A
# per-line `# type: ignore[<code>]` pins one code and goes stale under the other — which broke
# CI silently (a local mypy cache masked it). The override covers every import site at once.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
